[gd_scene load_steps=5 format=2]

[ext_resource path="res://stages/stage_road1.gd" type="Script" id=1]
[ext_resource path="res://stages/city1middle_road1.tscn" type="PackedScene" id=2]
[ext_resource path="res://rebel/rebel_on_foot.tscn" type="PackedScene" id=3]
[ext_resource path="res://rebel/rebel_on_moped.tscn" type="PackedScene" id=4]

[node name="city1stage" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="city1middle_road1" parent="." index="0" instance=ExtResource( 2 )]

script = null

[node name="city1middle_road2" parent="." index="1" instance=ExtResource( 2 )]

position = Vector2( 1664, 0 )
script = null

[node name="city1middle_road3" parent="." index="2" instance=ExtResource( 2 )]

position = Vector2( 3328, 0 )
script = null

[node name="rebel_on_foot" parent="." index="3" instance=ExtResource( 3 )]

position = Vector2( 227.433, 154.654 )

[node name="rebel_on_moped" parent="." index="4" instance=ExtResource( 4 )]

position = Vector2( 234.256, 507.176 )


